# klein-embedding-v1

./: .gitignore  README.md  hf_upload.py  make.py  pyproject.toml  uplod.py
data/tokenizer/: merges.txt  tokenizer.json  vocab.json
eval/: tokenizer.py
model/: encoder.py  mha.py  roberta.py
processing/: dataset.py  eng_rawdata.py  raw_data.py  split.py  translation_merger.py
train/: loss.txt  model_trainer.py  tokenizer.py  trainer.py
