[project]
name = "klein-embedding"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"  # <--- Change this line
dependencies = [
    "datasets>=4.4.2",
    "huggingface-hub<1.0",
    "lightning-sdk>=2025.12.17",
    "matplotlib>=3.10.8",
    "mteb>=2.7.2",
    "onnxruntime>=1.23.2",
    "python-dotenv>=1.2.1",
    "tokenizer>=3.6.2",
    "torch>=2.9.1",
    "tqdm>=4.67.1",
    "trackio>=0.14.2",
    "wandb>=0.23.1",
]
